临时提交：使用构造函数注入形成了循环依赖，